FUSETOOLS-2531 - Provide tests, factorize code and fix compilation issue
- compilation issues where due to last rebase and the removal of a class
- the doOverrides was no more correctly used in some Classes
- provide tests for the doOverrides
- provide tests for the VM arguments
- factorize code
- use hierarchy closer to reality of Karaf/Fuse 

Signed-off-by: Aurélien Pupier <apupier@redhat.com>